# backend/src/modules/organizers/organizer.router.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
-import { handleListOrganizers } from './organizer.controller';
+import { handleCreateOrganizer, handleListOrganizers } from './organizer.controller';
 
 export const organizersRouter = Router();
 
 organizersRouter.get('/', handleListOrganizers);
+organizersRouter.post('/', handleCreateOrganizer);
