# backend/src/modules/venues/venue.router.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
-import { handleListVenues } from './venue.controller';
+import { handleCreateVenue, handleListVenues } from './venue.controller';
 
 export const venuesRouter = Router();
 
 venuesRouter.get('/', handleListVenues);
+venuesRouter.post('/', handleCreateVenue);
